--- a/style.css
+++ b/style.css
@@ -58,14 +58,20 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  width: 540px;
+  width: 550px;
   height: 100%;
   display: flex;
   align-items: center;
   z-index: 1;
 }
+
+.hero-tag {
+  text-align: center;
+  padding: 10% 2%;
+  border-radius: 5px;
+}
 .gallery-content h1 {
-  font-size: 36px;
+  font-size: 40px;
   color: #fff;
   font-weight: 700;
   margin-bottom: 32px;
