modified:   index.html 	new file:   script.js 	modified:   style.css

--- a/style.css
+++ b/style.css
@@ -20,6 +20,12 @@ body {
   padding: 0 16px;
 }
 
+.navbar-nav .nav-link.active {
+  border-bottom: 2px solid var(--secondary);
+  width: 95%;
+  transition: border-bottom 0.2s ease-in-out; /* Change the duration and timing function to your preference */
+}
+
 /* start: Gallery Section */
 .gallery-section {
   overflow: hidden;
