modified:   index.html 	modified:   style.css

--- a/style.css
+++ b/style.css
@@ -284,6 +284,7 @@ h5 {
   border-color: transparent transparent transparent var(--dark-2);
 }
 .card h3 {
+  text-align: center;
   font-size: 24px;
   font-weight: 600;
   margin-bottom: 10px;
@@ -292,6 +293,7 @@ h5 {
 .card p {
   margin-bottom: 16px;
   color: var(--light);
+  text-align: justify;
 }
 .card .time {
   font-size: 14px;
