--- a/index.css
+++ b/index.css
@@ -361,3 +361,54 @@ h5 {
     padding-left: 0;
   }
 }
+
+.hero {
+  width: 100%;
+  height: 60vh;
+  background-image: linear-gradient(var(--primary) 40%, rgba(33, 150, 243, 0.5)),
+    url(assets/background.jpg);
+  background-position: center;
+  background-size: cover;
+  text-align: center;
+  position: relative;
+}
+
+.row {
+  width: 85%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.col {
+  flex-basis: 22%;
+  text-align: center;
+  color: var(--light);
+}
+.counter-box {
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  padding: 20px 0;
+  border-radius: 5px;
+  box-shadow: 0 0 20px -4px #66676c;
+  background-color: var(--primary);
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+  opacity: 0.7;
+}
+h2 {
+  font-size: 50px;
+  display: inline-block;
+  margin: 15px 0;
+  color: var(--light);
+}
+.counter-box .fa,
+.fa-solid {
+  font-size: 40px;
+  color: var(--secondary);
+  display: block;
+}
