--- a/index.css
+++ b/index.css
@@ -362,7 +362,11 @@ h5 {
   }
 }
 
-.hero {
+/* End: What We Provide Section */
+
+/* Start: Counter Section */
+
+.milestone-section {
   width: 100%;
   height: 60vh;
   background-image: linear-gradient(var(--primary) 40%, rgba(33, 150, 243, 0.5)),
