--- a/index.css
+++ b/index.css
@@ -404,6 +404,12 @@ h5 {
   backdrop-filter: blur(5px);
   opacity: 0.7;
 }
+
+.counter-box.active {
+  background-color: #f5f5f5;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+}
+
 h2 {
   font-size: 50px;
   display: inline-block;
