--- a/index.css
+++ b/index.css
@@ -424,3 +424,70 @@ h2 {
 }
 
 /* End: Counter Section */
+
+.featured-mentor {
+  height: 80vh;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background-image: linear-gradient(
+    var(--primary) 40%,
+    rgba(33, 150, 243, 0.5)
+  );
+  background-position: center;
+  background-size: cover;
+  text-align: center;
+  position: relative;
+}
+
+.card-feature {
+  position: relative;
+  width: 500px;
+  height: 300px;
+  border-radius: 10px;
+  box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.5);
+  transition: 0.3s;
+  padding: 40px 50px;
+  background: #fff;
+  cursor: pointer;
+  margin-top: 3%;
+  margin-bottom: 5%;
+  margin-right: 30px;
+}
+
+.card-feature:hover {
+  height: 600px;
+}
+
+.imgbox {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transform: translateY(-80px);
+  z-index: 99;
+}
+
+img {
+  width: 100%;
+  border-radius: 10px;
+  box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.5);
+}
+
+.content {
+  padding: 10px 20px;
+  text-align: center;
+  transform: translateY(-450px);
+  opacity: 0;
+  transition: 0.3s;
+}
+
+.card-feature:hover > .content {
+  opacity: 1;
+  transform: translateY(-200px);
+}
+
+.content h2 {
+  color: #7f9ead;
+}
