--- a/index.css
+++ b/index.css
@@ -368,7 +368,7 @@ h5 {
 
 .milestone-section {
   width: 100%;
-  height: 60vh;
+  height: 70vh;
   background-image: linear-gradient(var(--primary) 40%, rgba(33, 150, 243, 0.5)),
     url(assets/background.jpg);
   background-position: center;
@@ -378,7 +378,7 @@ h5 {
 }
 
 .row {
-  width: 85%;
+  width: 90%;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -396,18 +396,13 @@ h5 {
   width: 100%;
   height: 100%;
   background: #fff;
-  padding: 20px 0;
+  padding: 30px 0;
   border-radius: 5px;
   box-shadow: 0 0 20px -4px #66676c;
   background-color: var(--primary);
   -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px);
   opacity: 0.7;
-}
-
-.counter-box.active {
-  background-color: #f5f5f5;
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
 }
 
 h2 {
@@ -425,13 +420,9 @@ h2 {
 
 /* End: Counter Section */
 
-.featured-mentor {
+.mentor {
+  width: 100%;
   height: 80vh;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
   background-image: linear-gradient(
     var(--primary) 40%,
     rgba(33, 150, 243, 0.5)
@@ -439,6 +430,13 @@ h2 {
   background-position: center;
   background-size: cover;
   text-align: center;
+}
+
+.featured-mentor {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   position: relative;
 }
 
