--- a/index.css
+++ b/index.css
@@ -420,6 +420,7 @@ h2 {
 
 /* End: Counter Section */
 
+/* Start: Mentor Section */
 .mentor {
   width: 100%;
   height: 80vh;
@@ -489,3 +490,5 @@ img {
 .content h2 {
   color: #7f9ead;
 }
+
+/* End: Mentor Section */
