modified:   index.css 	modified:   index.html

--- a/index.css
+++ b/index.css
@@ -467,7 +467,7 @@ h2 {
   z-index: 99;
 }
 
-img {
+.img-mentor {
   width: 100%;
   border-radius: 10px;
   box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.5);
