edited minor merges

--- a/index.css
+++ b/index.css
@@ -515,7 +515,7 @@ img {
 
 
   .featured-mentors {
-    margin: 10% 2%
+    margin: 10% 2%;
     justify-content: center;
   }
   .featured-mentor {
