--- a/index.css
+++ b/index.css
@@ -450,6 +450,7 @@ h2 {
   color: white;
   font-weight: 300;
   font-family: "lato", sans-serif;
+  font-size: 24px;
 }
 
 .featured-mentors {
@@ -540,7 +541,7 @@ img {
     text-align: left;
     margin-left: 2%;
     padding-bottom: 5%;
-    font-size: 16px;
+    font-size: 20px;
     font-family: "lato", sans-serif;
   }
   .card-feature {
@@ -625,6 +626,18 @@ img {
 
 /* Start Success stories  */
 
+.stories {
+  text-align: center;
+  width: 100%;
+  height: 50vh;
+  padding-top: 1%;
+}
+
+.story-title {
+  margin: 2% 2%;
+  justify-content: center;
+}
+
 .success-stories {
   display: flex;
   justify-content: center;
@@ -634,14 +647,14 @@ img {
 
 .Success {
   font-family: "Montserrat", sans-serif;
-  font-size: 30px;
+  font-size: 45px;
   color: var(--light);
   font-weight: 700;
   text-align: center;
 }
 .Guide {
   font-family: "lato", sans-serif;
-  font-size: 30px;
+  font-size: 24px;
   color: var(--light);
   font-weight: 300;
   text-align: center;
@@ -649,10 +662,11 @@ img {
 
 .Students {
   width: 100%;
-  height: 80vh;
+  height: 50vh;
+  margin-top: 5%;
   background-image: linear-gradient(
-    var(--primary) 40%,
-    rgba(33, 150, 243, 0.5)
+    rgba(33, 150, 243, 0.5),
+    var(--primary) 40%
   );
   background-position: center;
   background-size: cover;
