--- a/index.css
+++ b/index.css
@@ -68,6 +68,7 @@ body {
   overflow: hidden;
   position: relative;
 }
+
 .gallery-section::before {
   content: "";
   position: absolute;
@@ -83,6 +84,7 @@ body {
   z-index: 1;
   pointer-events: none;
 }
+
 .gallery-section::after {
   content: "";
   position: absolute;
@@ -94,9 +96,11 @@ body {
   z-index: 1;
   pointer-events: none;
 }
+
 .gallery-wrapper {
   position: relative;
 }
+
 .gallery-content {
   position: absolute;
   top: 0;
@@ -120,6 +124,7 @@ body {
   font-weight: 700;
   margin-bottom: 24px;
 }
+
 .gallery-content p,
 h5 {
   color: #fff;
@@ -150,18 +155,22 @@ h5 {
   min-height: 500px;
   height: 100vh;
 }
+
 .gallery-images-wrapper {
   display: flex;
   transform: rotateZ(15deg);
 }
+
 .gallery-images {
   margin-top: -100px;
   margin-right: 32px;
   animation: animate var(--duration, 10s) infinite linear;
 }
+
 .gallery-images:hover {
   animation-play-state: paused;
 }
+
 .gallery-images a {
   display: block;
   width: 160px;
@@ -171,10 +180,12 @@ h5 {
   overflow: hidden;
   transition: all 0.3s;
 }
+
 .gallery-images a:hover {
   transform: scale(1.1);
   box-shadow: 0 0 0 4px var(--primary), 0 0 0 6px var(--secondary);
 }
+
 .gallery-images img {
   width: 100%;
   height: 100%;
@@ -294,6 +305,7 @@ h5 {
   border-color: transparent transparent transparent var(--light);
 }
 .card h3 {
+  font-family: "lato", sans-serif;
   text-align: center;
   font-size: 24px;
   font-weight: 600;
@@ -382,7 +394,6 @@ h5 {
   text-align: center;
   position: relative;
 }
-
 .row {
   width: 90%;
   display: flex;
@@ -410,7 +421,6 @@ h5 {
   backdrop-filter: blur(5px);
   opacity: 0.7;
 }
-
 h2 {
   font-size: 50px;
   display: inline-block;
@@ -435,7 +445,6 @@ h2 {
   background-size: cover;
   text-align: center;
 }
-
 .title-mentor {
   font-size: 45px;
   font-weight: 600;
@@ -452,19 +461,16 @@ h2 {
   font-family: "lato", sans-serif;
   font-size: 24px;
 }
-
 .featured-mentors {
   justify-content: center;
   align-items: center;
 }
-
 .featured-mentor {
   display: flex;
   justify-content: center;
   align-items: center;
   position: relative;
 }
-
 .card-feature {
   position: relative;
   width: 500px;
@@ -479,11 +485,9 @@ h2 {
   margin-bottom: 5%;
   margin-right: 30px;
 }
-
 .card-feature:hover {
   height: 700px;
 }
-
 .imgbox {
   position: relative;
   width: 100%;
@@ -491,12 +495,10 @@ h2 {
   transform: translateY(-80px);
   z-index: 99;
 }
-
 img {
   width: 100%;
   border-radius: 10px;
 }
-
 .content {
   padding: 10px 20px;
   text-align: center;
@@ -504,12 +506,10 @@ img {
   opacity: 0;
   transition: 0.3s;
 }
-
 .card-feature:hover > .content {
   opacity: 1;
   transform: translateY(-300px);
 }
-
 .content h2 {
   color: #7f9ead;
 }
@@ -524,7 +524,6 @@ img {
   .featured-mentor {
     flex-direction: column;
   }
-
   .title-mentor {
     font-size: 28px;
     font-weight: 600;
@@ -534,7 +533,6 @@ img {
     text-align: left;
     margin-left: 2%;
   }
-
   .subtitle-mentor {
     color: white;
     font-weight: 300;
@@ -555,7 +553,6 @@ img {
   .featured-mentor {
     flex-direction: column;
   }
-
   .title-mentor {
     font-size: 36px;
     font-weight: 600;
@@ -564,7 +561,6 @@ img {
     padding-top: 5%;
     margin-right: 5%;
   }
-
   .subtitle-mentor {
     color: white;
     font-weight: 300;
@@ -576,11 +572,9 @@ img {
 
 @media only screen and (min-width: 768px) and (max-width: 991.98px) {
   /* styles for landscape tablets and small laptops */
-
   .featured-mentor {
     flex-direction: column;
   }
-
   .title-mentor {
     font-size: 36px;
     font-weight: 600;
@@ -589,7 +583,6 @@ img {
     padding-top: 5%;
     margin-right: 5%;
   }
-
   .subtitle-mentor {
     color: white;
     font-weight: 300;
@@ -598,13 +591,11 @@ img {
     margin-top: 10%;
   }
 }
-
 @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
   /* styles for medium laptops and desktops */
   .featured-mentor {
     flex-direction: column;
   }
-
   .title-mentor {
     font-size: 36px;
     font-weight: 600;
@@ -613,7 +604,6 @@ img {
     padding-top: 5%;
     margin-right: 5%;
   }
-
   .subtite-mentor {
     color: white;
     font-weight: 300;
@@ -626,6 +616,22 @@ img {
 
 /* Start Success stories  */
 
+.row-stories {
+  width: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+}
+
+.col-stories {
+  flex-basis: 22%;
+  text-align: center;
+  color: var(--light);
+}
+
 .stories {
   text-align: center;
   width: 100%;
@@ -636,13 +642,6 @@ img {
 .story-title {
   margin: 2% 2%;
   justify-content: center;
-}
-
-.success-stories {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
 }
 
 .Success {
@@ -659,7 +658,6 @@ img {
   font-weight: 300;
   text-align: center;
 }
-
 .Students {
   display: grid;
   width: 100%;
@@ -685,13 +683,11 @@ img {
   margin-bottom: 5%;
   margin-right: 30px;
 }
-
 .featured-student {
   height: 20vh;
   width: 10vw;
   border-radius: 80%;
 }
-
 .Student-content {
   color: var(--light);
 }
