--- a/index.css
+++ b/index.css
@@ -397,7 +397,7 @@ h5 {
   text-align: center;
   position: relative;
 }
-.row {
+.milestone-row {
   width: 90%;
   display: flex;
   align-items: center;
@@ -710,7 +710,17 @@ img {
   position: relative;
 }
 
-.row {
+..milestone-row {
+  width: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+ {
   width: 90%;
   display: flex;
   align-items: center;
