modified:   index.css 	modified:   index.html

--- a/index.css
+++ b/index.css
@@ -16,9 +16,6 @@
   --dark-2: #252728;
   --grey: #aaa;
   --light: #fff;
-  --clr-primary: #651fff;
-  --clr-gray: #37474f;
-  --clr-gray-light: #b0bec5;
 }
 body {
   font-family: "Urbanist", sans-serif;
@@ -397,7 +394,7 @@ h5 {
   text-align: center;
   position: relative;
 }
-.milestone-row {
+#row-milestone {
   width: 90%;
   display: flex;
   align-items: center;
@@ -619,38 +616,24 @@ img {
 
 /* Start Success stories  */
 
-.success-section {
+.stories {
+  text-align: center;
   width: 100%;
-  height: 70vh;
+  height: 60vh;
+  padding-top: 1%;
   background-image: linear-gradient(var(--primary) 40%, rgba(33, 150, 243, 0.5)),
     url(assets/success.jpeg);
   background-position: center;
   background-size: cover;
   text-align: center;
   position: relative;
-}
-
-.row-stories {
-  width: 90%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  position: absolute;
-  top: 40%;
-  left: 50%;
+  opacity: 0.8;
 }
 
 .col-stories {
   flex-basis: 22%;
   text-align: center;
   color: var(--light);
-}
-
-.stories {
-  text-align: center;
-  width: 100%;
-  height: 50vh;
-  padding-top: 1%;
 }
 
 .story-title {
@@ -699,11 +682,9 @@ img {
 }
 .featured-student {
   height: 20vh;
-  width: 9vw;
+  width: 10vw;
   border-radius: 80%;
 }
 .Student-content {
   color: var(--light);
 }
-
-/* End Success stories  */
