--- a/index.css
+++ b/index.css
@@ -416,11 +416,11 @@ h5 {
   background: #fff;
   padding: 30px 0;
   border-radius: 5px;
-  box-shadow: 0 0 20px -4px #66676c;
+  box-shadow: 0 0 20px -4px #5a6280;
   background-color: var(--primary);
   -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px);
-  opacity: 0.7;
+  opacity: 0.85;
 }
 h2 {
   font-size: 45px;
@@ -484,6 +484,7 @@ h2 {
   margin-top: 3%;
   margin-bottom: 5%;
   margin-right: 30px;
+  border: solid 1px var(--primary);
 }
 .card-feature:hover {
   height: 700px;
@@ -621,7 +622,6 @@ img {
 .stories {
   text-align: center;
   width: 100%;
-
   padding-top: 1%;
   background: linear-gradient(var(--primary) 40%, rgba(33, 150, 243, 0.5));
 }
@@ -630,6 +630,13 @@ img {
   flex-basis: 22%;
   text-align: center;
   color: var(--light);
+  padding: 10px 10px;
+  border-radius: 5px;
+  margin: 0 10px;
+  background-color: var(--primary);
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+  opacity: 0.8;
 }
 
 .story-title {
@@ -677,7 +684,13 @@ img {
   width: 10vw;
   border-radius: 80%;
 }
-.Student-content {
-  color: var(--light);
+
+.student-name {
+  color: #ffb100;
   font-family: "lato", sans-serif;
+}
+.Student-content {
+  font-size: 16px;
+  color: var(--light);
+  font-family: "Rubik";
 }
