--- a/index.css
+++ b/index.css
@@ -692,6 +692,7 @@ img {
   height: 40vh;
   border-radius: 50%;
   border: solid 3px var(--secondary);
+  clip-path: circle(200px at center);
 }
 
 .student-name {
