--- a/index.css
+++ b/index.css
@@ -632,13 +632,14 @@ img {
   flex-basis: 22%;
   text-align: center;
   color: var(--light);
-  padding: 10px 10px;
+  padding: 10px 40px;
   border-radius: 5px;
   margin: 0 10px;
   background-color: var(--primary);
   -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px);
   opacity: 0.9;
+  // border: solid 1px var(--secondary);
 }
 
 .story-title {
