--- a/index.css
+++ b/index.css
@@ -691,6 +691,7 @@ img {
 .featured-student {
   height: 40vh;
   width: 100%;
+  position: relative;
   border-radius: 80%;
   border: solid 2px var(--secondary);
   clip-path: circle(200px at center);
