new file:   index-dummy.css 	new file:   index-dummy.html 	new file:   index-dummy.js 	modified:   index.css 	modified:   index.html

--- a/index-dummy.css
+++ b/index-dummy.css
@@ -34,28 +34,33 @@ body {
   width: 93%;
   transition: border-bottom 0.2s ease-in-out; /* Change the duration and timing function to your preference */
 }
+
 .nav-link.active {
   font-weight: bold;
   border-bottom: 2px solid var(--primary);
   width: 93%;
   transition: border-bottom 0.2s ease-in-out; /* Change the duration and timing function to your preference */
 }
+
 .custom-border {
   border-color: #0a2647;
   color: #0a2647;
   font-weight: 500;
 }
+
 .btn-login,
 .btn-login:hover {
   background-color: var(--primary);
   color: #fff;
   border-color: var(--primary);
 }
+
 .btn-signup:hover {
   background-color: var(--secondary);
   background-color: var(--secondary);
   color: var(--primary);
 }
+
 /* End: Navigation Bar */
 
 /* Start: Hero Gallery Section */
@@ -432,14 +437,15 @@ h2 {
   display: block;
 }
 
-/* Start: Featured Mentor Section */
+/* End: Counter Section */
+
+/* Start: Mentor Section */
 .mentor {
   background: linear-gradient(var(--primary) 40%, rgba(33, 150, 243, 0.5));
   background-position: center;
   background-size: cover;
   text-align: center;
 }
-
 .title-mentor {
   font-size: 36px;
   font-weight: 500;
@@ -450,54 +456,52 @@ h2 {
   padding-top: 2%;
   font-family: "Montserrat", sans-serif;
 }
-
 .subtitle-mentor {
   color: white;
   font-family: "lato", sans-serif;
   font-size: 24px;
 }
-
+.featured-mentors {
+  justify-content: center;
+  align-items: center;
+}
 .featured-mentor {
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
   position: relative;
 }
-
 .card-feature {
   position: relative;
   width: 500px;
-  height: 500px;
+  height: 450px;
   border-radius: 10px;
   box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.5);
   transition: 0.3s;
-  padding: 60px 50px;
+  padding: 40px 50px;
   background: #fff;
   cursor: pointer;
-  margin: 30px;
+  margin-top: 3%;
+  margin-bottom: 5%;
+  margin-right: 30px;
   border: solid 1px var(--primary);
 }
-
 .card-feature:hover {
-  height: 750px;
+  height: 700px;
 }
-
 .imgbox {
   position: relative;
   width: 100%;
   height: 100%;
-  transform: translateY(-70px);
+  transform: translateY(-80px);
   z-index: 99;
-  object-fit: cover;
 }
-
 img {
   width: 100%;
   border-radius: 10px;
 }
-
 .content {
-  padding: 5px 20px;
+  padding: 10px 20px;
   text-align: center;
   transform: translateY(-450px);
   opacity: 0;
@@ -513,6 +517,104 @@ img {
   font-family: "lato", sans-serif;
 }
 
+@media only screen and (max-width: 575px) {
+  /* styles for small phones */
+
+  .featured-mentors {
+    margin: 10% 2%;
+    justify-content: center;
+  }
+  .featured-mentor {
+    flex-direction: column;
+  }
+  .title-mentor {
+    font-size: 28px;
+    font-weight: 600;
+    color: var(--light);
+    padding-top: 5%;
+    margin-right: 10%;
+    text-align: left;
+    margin-left: 2%;
+  }
+  .subtitle-mentor {
+    color: white;
+    font-weight: 300;
+    text-align: left;
+    margin-left: 2%;
+    padding-bottom: 5%;
+    font-size: 20px;
+    font-family: "lato", sans-serif;
+  }
+  .card-feature {
+    margin-left: auto;
+    margin-top: 10%;
+  }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 767.98px) {
+  /* styles for large phones and portrait tablets */
+  .featured-mentor {
+    flex-direction: column;
+  }
+  .title-mentor {
+    font-size: 36px;
+    font-weight: 600;
+    margin-bottom: 36px;
+    color: var(--light);
+    padding-top: 5%;
+    margin-right: 5%;
+  }
+  .subtitle-mentor {
+    color: white;
+    font-weight: 300;
+  }
+  .card-feature {
+    margin-top: 10%;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991.98px) {
+  /* styles for landscape tablets and small laptops */
+  .featured-mentor {
+    flex-direction: column;
+  }
+  .title-mentor {
+    font-size: 36px;
+    font-weight: 600;
+    margin-bottom: 36px;
+    color: var(--light);
+    padding-top: 5%;
+    margin-right: 5%;
+  }
+  .subtitle-mentor {
+    color: white;
+    font-weight: 300;
+  }
+  .card-feature {
+    margin-top: 10%;
+  }
+}
+@media only screen and (min-width: 992px) and (max-width: 1199.98px) {
+  /* styles for medium laptops and desktops */
+  .featured-mentor {
+    flex-direction: column;
+  }
+  .title-mentor {
+    font-size: 36px;
+    font-weight: 600;
+    margin-bottom: 36px;
+    color: var(--light);
+    padding-top: 5%;
+    margin-right: 5%;
+  }
+  .subtitle-mentor {
+    color: white;
+    font-weight: 300;
+  }
+  .card-feature {
+    margin-top: 10%;
+  }
+}
 /* End: Mentor Section */
 
 /* Start Success stories  */
@@ -606,4 +708,174 @@ img {
   font-family: "Rubik";
 }
 
+@media only screen and (max-width: 992px) {
+  .col-stories {
+    flex-basis: 100%;
+    margin: 10px 0;
+  }
+  .card-features {
+    height: auto;
+    margin: 10px 0;
+  }
+}
+
 /* End Success stories  */
+
+/* Start Testimonials  */
+
+#testimonials {
+  background-image: linear-gradient(
+    rgba(13, 117, 202, 0.5),
+    var(--primary) 40%
+  );
+  background-position: center;
+  background-size: cover;
+  text-align: center;
+  position: relative;
+}
+
+::selection {
+  color: #925252;
+  background: #ff7979;
+}
+
+.testimonial-title {
+  color: var(--light);
+  font-family: "Montserrat", sans-serif;
+  font-size: 36px;
+  padding-top: 5%;
+}
+.wrapper {
+  max-width: 1080px;
+  margin: 50px auto;
+  padding: 0px 20px;
+  position: relative;
+}
+.wrapper .center-line {
+  position: absolute;
+  height: 100%;
+  width: 4px;
+  background: var(--secondary);
+  left: 50%;
+  top: 20px;
+  transform: translateX(-50%);
+}
+.wrapper .row {
+  display: flex;
+}
+.wrapper .row-1 {
+  justify-content: flex-start;
+}
+.wrapper .row-2 {
+  justify-content: flex-end;
+}
+.wrapper .row section {
+  background: #fff;
+  border-radius: 5px;
+  width: calc(50% - 40px);
+  padding: 20px;
+  position: relative;
+}
+.wrapper .row section::before {
+  position: absolute;
+  content: "";
+  height: 15px;
+  width: 15px;
+  background: #fff;
+  top: 28px;
+  z-index: -1;
+  transform: rotate(45deg);
+}
+.row-1 section::before {
+  right: -7px;
+}
+.row-2 section::before {
+  left: -7px;
+}
+.row section .icon,
+.center-line .scroll-icon {
+  position: absolute;
+  background: #f2f2f2;
+  height: 40px;
+  width: 40px;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 50%;
+  color: var(--secondary);
+  font-size: 17px;
+  box-shadow: 0 0 0 4px #fff, inset 0 2px 0 rgba(0, 0, 0, 0.08),
+    0 3px 0 4px rgba(0, 0, 0, 0.05);
+}
+.center-line .scroll-icon {
+  bottom: 0px;
+  left: 50%;
+  font-size: 25px;
+  transform: translateX(-50%);
+}
+.row-1 section .icon {
+  top: 15px;
+  right: -60px;
+}
+.row-2 section .icon {
+  top: 15px;
+  left: -60px;
+}
+.row section .details,
+.row section .bottom {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.row section .details {
+  font-size: 22px;
+  font-weight: 600;
+}
+
+.bottom {
+  font-family: "latoregular", sans-serif;
+  font-weight: 500;
+}
+.row section p {
+  margin: 10px 0 17px 0;
+  font-family: "latoregular", sans-serif;
+}
+
+.row section .bottom a:hover {
+  transform: scale(0.97);
+}
+
+.testi-img {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 50%;
+}
+
+@media (max-width: 790px) {
+  .wrapper .center-line {
+    left: 40px;
+  }
+  .wrapper .row {
+    margin: 30px 0 3px 60px;
+  }
+  .wrapper .row section {
+    width: 100%;
+  }
+  .row-1 section::before {
+    left: -7px;
+  }
+  .row-1 section .icon {
+    left: -60px;
+  }
+}
+@media (max-width: 440px) {
+  .wrapper .center-line,
+  .row section::before,
+  .row section .icon {
+    display: none;
+  }
+  .wrapper .row {
+    margin: 10px 0;
+  }
+}
