--- a/index.css
+++ b/index.css
@@ -280,6 +280,11 @@ h5 {
   -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px);
 }
+
+.card:hover {
+  transform: scale(1.05);
+  transition: all 0.3s ease-in-out;
+}
 .card:nth-child(odd) {
   align-self: flex-end;
 }
@@ -416,6 +421,12 @@ h5 {
   -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px);
   opacity: 0.85;
+}
+
+.counter-box:hover {
+  transform: scale(1.05);
+  transition: all 0.3s ease-in-out;
+  box-shadow: 0 0 30px -4px #5a6280;
 }
 h2 {
   font-size: 45px;
@@ -607,3 +618,160 @@ img {
 }
 
 /* End Success stories  */
+
+#testimonials {
+  background-image: linear-gradient(
+    rgba(13, 117, 202, 0.5),
+    var(--primary) 40%
+  );
+  background-position: center;
+  background-size: cover;
+  text-align: center;
+  position: relative;
+}
+
+::selection {
+  color: #925252;
+  background: #ff7979;
+}
+
+.testimonial-title {
+  color: var(--light);
+  font-family: "Montserrat", sans-serif;
+  font-size: 36px;
+  padding-top: 5%;
+}
+.wrapper {
+  max-width: 1080px;
+  margin: 50px auto;
+  padding: 0px 20px;
+  position: relative;
+}
+.wrapper .center-line {
+  position: absolute;
+  height: 100%;
+  width: 4px;
+  background: var(--secondary);
+  left: 50%;
+  top: 20px;
+  transform: translateX(-50%);
+}
+.wrapper .row {
+  display: flex;
+}
+.wrapper .row-1 {
+  justify-content: flex-start;
+}
+.wrapper .row-2 {
+  justify-content: flex-end;
+}
+.wrapper .row section {
+  background: #fff;
+  border-radius: 5px;
+  width: calc(50% - 40px);
+  padding: 20px;
+  position: relative;
+}
+.wrapper .row section::before {
+  position: absolute;
+  content: "";
+  height: 15px;
+  width: 15px;
+  background: #fff;
+  top: 28px;
+  z-index: -1;
+  transform: rotate(45deg);
+}
+.row-1 section::before {
+  right: -7px;
+}
+.row-2 section::before {
+  left: -7px;
+}
+.row section .icon,
+.center-line .scroll-icon {
+  position: absolute;
+  background: #f2f2f2;
+  height: 40px;
+  width: 40px;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 50%;
+  color: var(--secondary);
+  font-size: 17px;
+  box-shadow: 0 0 0 4px #fff, inset 0 2px 0 rgba(0, 0, 0, 0.08),
+    0 3px 0 4px rgba(0, 0, 0, 0.05);
+}
+.center-line .scroll-icon {
+  bottom: 0px;
+  left: 50%;
+  font-size: 25px;
+  transform: translateX(-50%);
+}
+.row-1 section .icon {
+  top: 15px;
+  right: -60px;
+}
+.row-2 section .icon {
+  top: 15px;
+  left: -60px;
+}
+.row section .details,
+.row section .bottom {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.row section .details {
+  font-size: 22px;
+  font-weight: 600;
+}
+
+.bottom {
+  font-family: "latoregular", sans-serif;
+  font-weight: 500;
+}
+.row section p {
+  margin: 10px 0 17px 0;
+  font-family: "latoregular", sans-serif;
+}
+
+.row section .bottom a:hover {
+  transform: scale(0.97);
+}
+
+.testi-img {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 50%;
+}
+
+@media (max-width: 790px) {
+  .wrapper .center-line {
+    left: 40px;
+  }
+  .wrapper .row {
+    margin: 30px 0 3px 60px;
+  }
+  .wrapper .row section {
+    width: 100%;
+  }
+  .row-1 section::before {
+    left: -7px;
+  }
+  .row-1 section .icon {
+    left: -60px;
+  }
+}
+@media (max-width: 440px) {
+  .wrapper .center-line,
+  .row section::before,
+  .row section .icon {
+    display: none;
+  }
+  .wrapper .row {
+    margin: 10px 0;
+  }
+}
