--- a/index.css
+++ b/index.css
@@ -76,9 +76,11 @@ body {
   left: 0;
   width: 940px;
   height: 100%;
-  background-image: linear-gradient(90deg,
-      var(--primary) 50%,
-      transparent 100%);
+  background-image: linear-gradient(
+    90deg,
+    var(--primary) 50%,
+    transparent 100%
+  );
   z-index: 1;
   pointer-events: none;
 }
@@ -246,9 +248,11 @@ h5 {
   }
 
   .gallery-section::before {
-    background-image: linear-gradient(180deg,
-        var(--primary) 40%,
-        transparent 100%);
+    background-image: linear-gradient(
+      180deg,
+      var(--primary) 40%,
+      transparent 100%
+    );
     height: 500px;
   }
 }
@@ -395,7 +399,6 @@ h5 {
 }
 
 @media screen and (max-width: 420px) {
-
   .line,
   .card .dot,
   .card::before {
@@ -547,7 +550,7 @@ img {
   font-family: "Rubik";
 }
 
-.card-feature:hover>.content {
+.card-feature:hover > .content {
   opacity: 1;
   transform: translateY(-350px);
 }
@@ -580,7 +583,6 @@ img {
   -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px);
   opacity: 0.9;
-  border: solid 1px var(--secondary);
 }
 
 .story-title {
@@ -650,182 +652,13 @@ img {
   font-family: "Rubik";
 }
 
-/* End Success stories  */
-
-#testimonials {
-  background-image: linear-gradient(rgba(13, 117, 202, 0.5),
-      var(--primary) 40%);
-  background-position: center;
-  background-size: cover;
-  text-align: center;
-  position: relative;
-}
-
-::selection {
-  color: #925252;
-  background: #ff7979;
-}
-
-.testimonial-title {
-  color: var(--light);
-  font-family: "Montserrat", sans-serif;
-  font-size: 36px;
-  padding-top: 5%;
-}
-
-.wrapper {
-  max-width: 1080px;
-  margin: 50px auto;
-  padding: 0px 20px;
-  position: relative;
-}
-
-.wrapper .center-line {
-  position: absolute;
-  height: 100%;
-  width: 4px;
-  background: var(--secondary);
-  left: 50%;
-  top: 20px;
-  transform: translateX(-50%);
-}
-
-.wrapper .row {
-  display: flex;
-}
-
-.wrapper .row-1 {
-  justify-content: flex-start;
-}
-
-.wrapper .row-2 {
-  justify-content: flex-end;
-}
-
-.wrapper .row section {
-  background: #fff;
-  border-radius: 5px;
-  width: calc(50% - 40px);
-  padding: 20px;
-  position: relative;
-}
-
-.wrapper .row section::before {
-  position: absolute;
-  content: "";
-  height: 15px;
-  width: 15px;
-  background: #fff;
-  top: 28px;
-  z-index: -1;
-  transform: rotate(45deg);
-}
-
-.row-1 section::before {
-  right: -7px;
-}
-
-.row-2 section::before {
-  left: -7px;
-}
-
-.row section .icon,
-.center-line .scroll-icon {
-  position: absolute;
-  background: #f2f2f2;
-  height: 40px;
-  width: 40px;
-  text-align: center;
-  line-height: 40px;
-  border-radius: 50%;
-  color: var(--secondary);
-  font-size: 17px;
-  box-shadow: 0 0 0 4px #fff, inset 0 2px 0 rgba(0, 0, 0, 0.08),
-    0 3px 0 4px rgba(0, 0, 0, 0.05);
-}
-
-.center-line .scroll-icon {
-  bottom: 0px;
-  left: 50%;
-  font-size: 25px;
-  transform: translateX(-50%);
-}
-
-.row-1 section .icon {
-  top: 15px;
-  right: -60px;
-}
-
-.row-2 section .icon {
-  top: 15px;
-  left: -60px;
-}
-
-.row section .details,
-.row section .bottom {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.row section .details {
-  font-size: 22px;
-  font-weight: 600;
-}
-
-.bottom {
-  font-family: "latoregular", sans-serif;
-  font-weight: 500;
-}
-
-.row section p {
-  margin: 10px 0 17px 0;
-  font-family: "latoregular", sans-serif;
-}
-
-.row section .bottom a:hover {
-  transform: scale(0.97);
-}
-
-.testi-img {
-  width: 200px;
-  height: 200px;
-  object-fit: cover;
-  object-position: center;
-  border-radius: 50%;
-}
-
-@media (max-width: 790px) {
-  .wrapper .center-line {
-    left: 40px;
+@media only screen and (max-width: 992px) {
+  .col-stories {
+    flex-basis: 100%;
+    margin: 10px 0;
   }
-
-  .wrapper .row {
-    margin: 30px 0 3px 60px;
-  }
-
-  .wrapper .row section {
-    width: 100%;
-  }
-
-  .row-1 section::before {
-    left: -7px;
-  }
-
-  .row-1 section .icon {
-    left: -60px;
-  }
-}
-
-@media (max-width: 440px) {
-
-  .wrapper .center-line,
-  .row section::before,
-  .row section .icon {
-    display: none;
-  }
-
-  .wrapper .row {
+  .card-features {
+    height: auto;
     margin: 10px 0;
   }
 }
