--- a/index.css
+++ b/index.css
@@ -263,7 +263,7 @@ h5 {
 /* Start: What We Provide Section */
 
 .what-we-provide {
-  max-width: 991px;
+  max-width: 1200px;
   width: 100%;
   padding: 0 16px;
   margin: 48px auto;
@@ -291,7 +291,7 @@ h5 {
   color: var(--primary);
   max-width: calc(50% - 30px);
   position: relative;
-  background-color: rgba(255, 255, 255, 0.4);
+  background-color: #0b305a;
   -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px);
 }
